# Bioinformatics_Algorithms

./: .gitignore  CMakeLists.txt  README.md
05_FindingPatterns/: 05.02_NaiveFind.cpp
data/: Ath_Chr1_1-1000000_CDS.fasta  Ath_Chr1_1-1000000_Peptide.fasta  Ath_small-test_BLAST_pep.fasta  BLOSUM62.csv  GeneticCode.txt
lib/: 05_FindingPatterns.cpp  05_FindingPatterns.h  06_SequenceAlignment.cpp  06_SequenceAlignment.h  06_SequenceAlignment_ex.cpp  06_SequenceAlignment_ex.h  07_DatabaseSearch.cpp  07_DatabaseSearch.h  07_DatabaseSearch_improved.cpp  07_DatabaseSearch_improved.h  08_MultipleAlignmentClass.cpp  08_MultipleAlignmentClass.h  08_MultipleSequenceAlignment.cpp  08_MultipleSequenceAlignment.h  CMakeLists.txt  Tools.cpp  Tools.h
src/05_FindingPatterns/: 02_NaiveFind.cpp  03_BoyerMoore.cpp  04_DeterministicFiniteAutomata.cpp  05-02_NaiveFind.cpp  05-03_BoyerMoore.cpp  05-04_DeterministicFiniteAutomata.cpp  05.02_NaiveFind.cpp
src/06_SequenceAlignment/: 02_Dotplot.cpp  03_ObjectiveFunction.cpp  04_NeedleMan-Wunsch.cpp  05_Smith-Waterman.cpp  06_SpecialCases.cpp  ex01_DotplotMaxDiagonal.cpp  ex02_NW-HandleTies.cpp  ex04_NW-HandleTies.cpp  ex05_SW-HandleTies.cpp  ex06_FindMate.cpp
src/07_BlastSearch/: 03_MyBLAST.cpp  My_improved_BLAST.cpp  ex02_QuantMismatches.cpp
src/08_MultipleSequenceAlignment/: MSA.cpp  Notes.md
